# Cache-Connect

./: .appveyor.yml  .gitignore  CMakeLists.txt  Doxyfile  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  client.cpp  client.h  clientinformation.cpp  clientinformation.h  clientmanager.cpp  clientmanager.h  clientthreadmanager.cpp  clientthreadmanager.h  connection.cpp  connection.h  controlcenter.cpp  controlcenter.h  controlcenter_p.cpp  controlcenter_p.h  crypt.cpp  crypt.h  cryptengine.cpp  cryptengine.h  debug.cpp  debugtransfer.cpp  file.cpp  file.h  message.cpp  message.h  messageinformation.cpp  messageinformation.h  messageserver.cpp  messageserver.h  rsapair.cpp  rsapair.h  securetunnel.cpp  securetunnel.h  transfer.cpp  transfer.h  transfermanager.cpp  transfermanager.h  transferserver.cpp  transferserver.h  transferthreadmanager.cpp  (+3 more)
src/lib/interfaces/: iclient.cpp  iclient.h  iclientmanager.cpp  iclientmanager.h  iconnection.cpp  iconnection.h  icontrolcenter.cpp  icryptengine.h  (+10 more)
src/ui/: CMakeLists.txt  cacheconnectwindow.cpp  cacheconnectwindow.h  messagelist.cpp  messagelist.h  messenger.cpp  messenger.h  pendingtransfers.cpp  pendingtransfers.h  runningtransfers.cpp  runningtransfers.h  uimanager.cpp  uimanager.h  userlist.cpp  userlist.h
src/ui/resources/: ActiveTransfer.qml  AppControls.qml  AppSettings.qml  FileTransfer.qml  IPCButton.qml  MainView.qml  MainWindow.qml  Messenger.qml  Notification.qml  PendingTransfer.qml  QuickConnect.qml  SideBar.qml  StatusBar.qml  TransferManager.qml  Welcome.qml
